<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/modifM"
        android:textSize="24dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newNomMonument"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/TxtNamePlace"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/txtModifName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:ems="10"
            android:maxLines="1"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newDescMonument"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/TxtDescPlace"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/descM"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:maxLines="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtRadios"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/BetterAtType"
            android:textSize="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupModif"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:checkedButton="@+id/jour"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/jourM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioDay" />

        <RadioButton
            android:id="@+id/nuitM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioNight" />
    </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ModifyImage"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:background="@drawable/background_addimg_button"
            android:text="@string/AddImageButton" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.95">

            <LinearLayout
                android:id="@+id/linearLayoutFormModifDialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageM"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background" />
            </LinearLayout>
        </HorizontalScrollView>


        <Button
            android:id="@+id/delImagesDialog"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:background="@drawable/background_addimg_button"
            android:text="@string/delImages" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_buttons"
        android:text="@string/ModifyButton" />



</LinearLayout>